Fix 1 pixel gap on the "More messages below" button
There was a tiny non-clickable gap on the "More messages below" button.
It's only present in the live embedded chat in Firefox though ¯\_(ツ)_/¯

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -862,9 +862,10 @@ a.flair12:hover {
     &::after {
         content: '';
         display: block;
-        height: 7px;
+        height: 8px;
         position: absolute;
         width: 100%;
+        margin-top: -1px;
     }
 }
 .chat-scroll-notify:hover {
